@@ -1,5 +1,7 @@
 2015-12-23  Carl Hetherington  <cth@carlh.net>
 
+	* Add basic search function to KDM creator screens list (#739).
+
 	* Version 2.6.10 released.
 
 2015-12-23  Carl Hetherington  <cth@carlh.net>
